--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     
     <div id="footer">
-        <p>&copy; 2024 Site de Vida Saudável. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Site Saúde em Foco. Todos os direitos reservados.</p>
     </div>
 </body>
 </html>
