--- a/receitas.html
+++ b/receitas.html
@@ -10,10 +10,20 @@
     <div id="header">
         <div id="logo">
             <img src="logo.png.png" width="500" height="100"> 
+            
         </div>
+        <nav>
+            <ul>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="dicas.html">Dicas</a></li>
+                <li><a href="receitas.html">Receitas</a></li>
+                <li><a href="loja.html">Loja Online</a></li>
+                <li><a href="index.html">Página inicial</a></li>
+            </ul>
+        </nav>
 
         <div id="texto1">
-            <img src="textb.png" width="360" height="180">
+            <img src="brow.png" width="260" height="80">
             <h2>Ingredientes</h2>
             <h3>1 xícara e 1/2 de farinha de castanha do Pará;
                 <br>
@@ -26,4 +36,56 @@
                 1 colher de chá de fermento químico;
                 <br>
                 1/3 xícara de chocolate 70% cacau.</h3>
+                <h2>Modo de Preparo</h2>
+                <h3>Bata os ovos com as tâmaras no liquidificador;
+                    <br>
+                    Acrescente o restante dos ingredientes (com exceção do chocolate em gotas que deve ser misturado manualmente no final);
+                    <br>
+                    Coloque a massa em uma forma untada;
+                    <br>
+                    Leve para assar em forno pré-aquecido a 180 graus por 20 minutos.
+                    <br>
+                    Está pronto! Agora, é só saborear esse docinho saudável sem se preocupar com o consumo exagerado de açúcar.</h3>
         </div>
+
+        <div id="texto2">
+            <img src="açaí.png" width="260" height="80">
+            <h2>Ingredientes</h2>
+            <h3>200 g de polpa de açaí
+                <br>
+                100 g de abacate congelado
+                <br>
+                1 banana congelada
+                <br>
+                1 colher (sopa) de mel, açúcar mascavo ou xylitol
+                <h2>Modo de Preparo</h2>
+                <h3>Bata tudo em um multiprocessador ou liquidificador até homogeneizar bem.
+                    <br>
+                    Depois coloque em um bowl e salpique um punhado de granola ou castanhas, e morangos ou outra fruta de sua preferência.</h3>
+        </div>
+
+        <div id="texto3">
+            <img src="pizza.png" width="260" height="80">
+            <h2>Ingredientes</h2>
+            <h3>200g de batata-doce cozida, sem casca amassada
+                <br>
+                2 colheres de sopa de farinha de arroz
+                <br>
+                1 colher de sopa de azeite de oliva
+                <br>
+                Sal a gosto</h3>
+                <h2>Modo de Preparo</h2>
+                <h3>Misture todos os ingredientes em uma tigela. 
+                    <br>
+                    Em uma forma de pizza, abra a massa suavemente com as mãos ou com a ajuda de uma colher. 
+                    <br>
+                    Leve ao forno por mais ou menos uns 10 minutos. 
+                    <br>
+                    Retire do forno, adicione o recheio da sua preferência e leve novamente.</h3>
+        </div>
+
+        <div id="footer">
+            <p>&copy; 2024 Site Saúde em Foco. Todos os direitos reservados.</p>
+        </div>
+    </body>
+    </html>
