--- a/receitas.html
+++ b/receitas.html
@@ -17,7 +17,7 @@
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
-                <li><a href="loja.html">Loja Online</a></li>
+                <li><a href="https://www.liveoficial.com.br/novidades/novidades-da-colecao?page=1&gad_source=1&gclid=Cj0KCQjw_qexBhCoARIsAFgBleuWht9MDyRv3KLrtDJMj6veOSPYNA9Rme9-1tEf3kEO3-wuTGGBFIAaAohjEALw_wcB">Loja Online</a></li>
                 <li><a href="index.html">Página inicial</a></li>
             </ul>
         </nav>
